--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.32.6",
-    "axios": "^1.4.0",
+    "@tanstack/react-query": "^4.33.0",
+    "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
