--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.8.0",
     "sass": "^1.64.1"
   },
   "devDependencies": {
